--- a/apoio_client/src/app/components/Filtros/FiltroSimples/FiltroSimples.css
+++ b/apoio_client/src/app/components/Filtros/FiltroSimples/FiltroSimples.css
@@ -4,9 +4,9 @@
     justify-content: start;
     align-items: center;
     position: relative;
-    width: 15%;
-    height: 1.5vw;
-    z-index: 999;
+    width: 15vw;
+    height: 1.8vw;
+    z-index: 9994;
 
     input {
         width: 100%;
@@ -14,10 +14,11 @@
         border: none;
         padding-left: 2.5vw;
         border-radius: 2vw;
-        background-color: rgba(255, 255, 255, 0.979);
+        background-color: var(--cor-min_grey);
+        box-shadow: 0 1px 0.1px 0px var(--cor-shadow-mid);
         outline: none;
         user-select: none;
-        font-size: 2vh;
+        font-size: 1vw;
     }
 
     .filterIcon{
@@ -29,7 +30,7 @@
         background-color: transparent;
         left: 5%;
         top: 20%;
-        font-size: 0.8vi;
+        font-size: 0.8vw;
     }
 
     
@@ -49,8 +50,8 @@
         top: 5%;
         z-index: 999;
         font-size: 0.8vw;
-        background-color: #D49292;
-        color: #ffff;
+        background-color: var(--cor-rose);
+        color: var(--cor-light);
     }
 
     button {
@@ -69,7 +70,7 @@
             border-radius: 50vw;
             border: none;
             left: 0vw;
-            font-size: 2.5vh;
+            font-size: 1vw;
         }
     }
 }
@@ -81,75 +82,19 @@
     max-width: 0vw;
     min-height: 0vh;
     max-height: 0vh;
-    top: 5.8vh;
-    overflow-y: auto;
+    top: 2.3vw;
+    overflow-y: hidden;
     position: absolute;
     transition: 0.5s;
     opacity: 0%;
-    .box-container {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        opacity: 0%;
-
-        .h1-container {
-            text-align: center;
-            background-color: #D49292;
-            color: #ffff;
-            padding: 0.2vw;
-            font-size: 1.3vw;
-
-
-        }
-
-        .h2-container {
-            text-align: start;
-            padding: 0.5vw;
-            font-size: 1.1vw;
-        }
-
-        .span-container {
-            text-align: start;
-            padding: 0.5vw;
-            cursor: pointer;
-            font-size: 1.7vh;
-        }
-    }
-}
-
-.filters {
     
-    display: flex;
-    flex-direction: column;
-    min-width: 100%;
-    max-width: 100%;
-    min-height: 3vh;
-    max-height: 30vh;
-    top: 130%;
-    border-radius: 7px;
-    position: absolute;
-    transition: 0.5s;
-    overflow-y: auto;
-    overflow-x: hidden ;
-    gap: 0.2vw;
-    background-color: rgb(240, 240, 240);
-    z-index: 999;
-    box-shadow: 0px 0px 8px rgb(144, 143, 143);
-    
-    /* Estilizando a scrollbar para navegadores baseados em WebKit (Chrome, Edge, Safari) */
 
     .span-container {
         text-align: start;
-        padding: 0.3vw;
-        width: 80%;
+        padding: 0.5vw;
         cursor: pointer;
-        text-wrap: nowrap;
-        font-size: 1.7vh;
-        }
-
-
-
-
+        font-size: 0.1vw;
+        opacity: 0%;
     }
 
     .filter-option {
@@ -159,7 +104,85 @@
             justify-content: start;
             align-items: center;
             flex-direction: row;
-            font-family: 'Arial';
+            font-size: 0.1vw;
+            opacity: 0%;
+            
+            input {
+                width: 10%;
+                height: 10%;
+                left: 0;
+                appearance: none;
+                position: absolute;
+                background-color: transparent;
+                
+                opacity: 0%;
+            }
+
+            .custom-checkbox {
+                display: inline-block;
+                width: 0.8vw;
+                height: 0.8vw;
+                border-radius: 1vw;
+                background-color: var(--cor-min_grey);
+                position: relative;
+                opacity: 0%;
+            }
+
+            .custom-checkbox::after {
+                content: '';
+                position: absolute;
+                width: 100%;
+                height: 100%;
+
+                border-radius: 1vw;
+                background-color: var(--cor-rose);
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                opacity: 0;
+                /* Esconder quando não está marcado */
+                transition: opacity 0.3s;
+            }             
+        }
+    }
+    
+}
+
+.filters {
+    
+    display: flex;
+    flex-direction: column;
+    min-width: 15vw;
+    max-width: 20vw;
+    min-height: 3vh;
+    max-height: 30vh;
+    top: 2.3vw;
+    border-radius: 7px;
+    position: absolute;
+    transition: 0.5s;
+    overflow-y: auto;
+    overflow-x: hidden ;
+    gap: 0.2vw;
+    background-color: var(--cor-min_grey);
+    box-shadow: 0px 0px 8px rgb(144, 143, 143);
+
+    .span-container {
+        text-align: start;
+        padding: 0.3vw;
+        width: 80%;
+        cursor: pointer;
+        text-wrap: nowrap;
+        font-size: 1vw;
+        }
+    }
+
+    .filter-option {
+        padding-left: 0.5vw;
+        label {
+            display: flex;
+            justify-content: start;
+            align-items: center;
+            flex-direction: row;
             font-size: 1vw;
             
             input {
@@ -176,7 +199,7 @@
                 width: 0.8vw;
                 height: 0.8vw;
                 border-radius: 1vw;
-                background-color: #c6c2c2;
+                background-color: var(--cor-min_grey);
                 position: relative;
             }
 
@@ -187,7 +210,7 @@
                 height: 100%;
 
                 border-radius: 1vw;
-                background-color: #D49292;
+                background-color: var(--cor-rose);
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%, -50%);
@@ -209,7 +232,7 @@
 
     .filter-option:hover{
         .custom-checkbox{
-            background-color: #c1878777;
+            background-color: var(--cor-rose);
         }
     }
 
@@ -222,14 +245,14 @@
 }
 
 .filters::-webkit-scrollbar-track {
-    background: #dedede;
+    background: var(--cor-min_grey);
     /* Cor de fundo da track */
     border-top-right-radius: 7px;
     border-bottom-right-radius: 7px;
 }
 
 .filters::-webkit-scrollbar-thumb {
-    background-color: #d49292a9;
+    background-color: var(--cor-rose);
     /* Cor do thumb */
     border-top-right-radius: 0px;
     border-bottom-right-radius: 0px;
@@ -237,6 +260,6 @@
 
 /* Opções adicionais para hover */
 .filters::-webkit-scrollbar-thumb:hover {
-    background-color: #8e5b5b;
+    background-color: var(--cor-rose);
     /* Cor do thumb ao passar o mouse */
 }
