--- a/apoio_client/src/app/components/SideBar/SideBar.css
+++ b/apoio_client/src/app/components/SideBar/SideBar.css
@@ -1,25 +1,15 @@
-.side_bar_container{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    width: 5%;
-    height: 100%;
-    transition: 0.5s;
-    user-select: none;
-}
-
 .side_bar_container .side_bar{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 65%;
+    height: 90%;
     width: 100%;
-    gap: 2vh;
-    transition: 0.5s; 
+    gap: 1vh;
     opacity: 35%;
     border: none;
+    overflow:hidden;
+    transition: 0.5s; 
 }
 
 .side_bar_container .side_bar .side_bar_item{
@@ -31,24 +21,23 @@
     border-radius: 50px;
     border: none;
     cursor: pointer;
-    background-color: #F4F3F3;
+    background-color: var(--cor-min_grey);  
     transition: 0.5s;
-    z-index: 997;
     .item_icon{
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color:#D49292;
-        color: white;
+        background-color:var(--cor-rose);
         height: 2.5vw;
         width: 2.7vw;
         border-radius: 50px;
         overflow: hidden;
-        font-size: 3vh;
         z-index: 999;
         transition: 0.2s;
         i{
             transition: 058ms;
+            color: var(--cor-light);  
+            font-size: 1.3vw;
         }
     }
 
@@ -76,8 +65,7 @@
             transition: 0.3s;
             transform: translateX(1vw);
             opacity: 0%;
-            font-family: 'Arial';
-            font-size: 2vh;
+            font-size: 1.3vw;
         }
     }
   
@@ -85,6 +73,8 @@
 .side_bar_container:hover{
     width: 18%;
     height: 100%;
+    background-color: white;
+    box-shadow: 0px 15px 10px 0px var(--cor-shadow-min);
     .infoSystem{
         opacity: 100%;
     }
@@ -92,7 +82,6 @@
     .side_bar{
         margin-left: 0.5vw;
         opacity: 100%; 
-        border-radius: 55px;
     }
 
     .side_bar .side_bar_item{
@@ -121,10 +110,10 @@
 }
 
 .infoSystem{
+    height: 10%;
     overflow: hidden;
     opacity: 0%;
     transition: 0.2s;
     text-wrap: nowrap;
-    font-family: 'Arial';
     font-size: 1vw;
 }
