--- a/apoio_client/src/app/components/TopMenu/TopMenu.css
+++ b/apoio_client/src/app/components/TopMenu/TopMenu.css
@@ -1,6 +1,3 @@
-
-
-
 .container_top .left_container_top{
     display: flex;
     flex-direction: row;
@@ -16,19 +13,17 @@
     align-items: center;
     justify-content: center;
     flex-wrap: nowrap;
+    height: 100%;
     width: 100%;
     gap: 0.5vw;
-    height: 100%;
     h1{
-        font-family: 'Arial';
-        font-size: 2vi;
-        color: black;
+        font-size: 2vw;
+        color: var(--cor-black);
     }
 
     span{
-        font-family: 'Arial';
-        font-size: 2vi;
-        color: #D49292;
+        font-size: 2vw;
+        color: var(--cor-rose);
     }
 }
 
@@ -70,8 +65,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 2.7vi;
-        height: 2.5vi;
+        width: 2.7vw;
+        height: 2.5vw;
         border-radius: 50%; 
         transition: 0.1s;
         button{
@@ -80,9 +75,9 @@
             border-radius: 50%;
             border: none;
             cursor: pointer;
-            background-color: #D49292;;
-            color: #ffff;
-            font-size:1.2vi;
+            background-color: var(--cor-rose);;
+            color: var(--cor-light);
+            font-size:1.2vw;
             transition: 80ms;
             
             opacity: 65%;
