--- a/apoio_client/src/app/pages/RenderPages/Relatorios/Components/Cards/Card.css
+++ b/apoio_client/src/app/pages/RenderPages/Relatorios/Components/Cards/Card.css
@@ -4,11 +4,11 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    width: 20%;
+    width: 15vw;
     height: 5vw;
     border-radius: 1vw;
-    background-color: rgb(242, 242, 242);
-    box-shadow: 0px 0.3vw 0.1vw 0px rgb(198, 186, 186);
+    background-color: var(--cor-min_grey);
+    box-shadow: 0px 0.3vw 0.1vw 0px var(--cor-shadow-mid);
     transition: 0.5s;
 
     button{
@@ -29,12 +29,12 @@
     .icon_card{
         display: flex;
         position: absolute;
-        left: 2vw;
+        left: 1vw;
         justify-content: center;
         align-items: center;
-        font-size: 3vw;
+        font-size: 2.5vw;
         i{
-            color: #cdabab;
+            color: var(--cor-rose);
         }
     }
         
@@ -44,9 +44,9 @@
         align-items: center;
         position: absolute;
         height: 100%;
-        margin-left: 40%;
+        margin-left: 4vw;
         width: 60%;
-
+        
         span{
             display: flex;
             justify-content: start;
@@ -56,15 +56,13 @@
             width: 100%;
             height: 100%; 
             font-size: 1vw;
-            font-family: 'Arial';
-            padding: 0.1vi;
         }
     }
 }
 
 .card:hover{
     box-shadow: 0px 0px 0.0vw 0.1vw rgb(220, 167, 167);
-    width: 22%;
+    width: 15.5vw;
 }
 
 .card:active{
