--- a/apoio_client/src/app/components/Filtros/FiltroDinamico/FiltroDinamico.css
+++ b/apoio_client/src/app/components/Filtros/FiltroDinamico/FiltroDinamico.css
@@ -1,12 +1,11 @@
-.filter-container {
+.d_filter-container {
     display: flex;
     flex-direction: row;
     justify-content: start;
     align-items: center;
     position: relative;
-    width: 15%;
-    height: 2.0vw;
-    z-index: 999;
+    width: 15vw;
+    height: 1.8vw;
 
     input {
         width: 100%;
@@ -14,13 +13,14 @@
         border: none;
         padding-left: 2.5vw;
         border-radius: 2vw;
-        background-color: rgba(255, 255, 255, 0.979);
+        background-color: var(--cor-min_grey);
+        box-shadow: 0 1px 0.1px 0px var(--cor-shadow-mid);
         outline: none;
         user-select: none;
-        font-size: 1vi;
+        font-size: 1vw;
     }
 
-    .filterIcon{
+    .filterIcon {
         position: absolute;
         width: 15%;
         height: 80%;
@@ -29,10 +29,10 @@
         background-color: transparent;
         left: 5%;
         top: 20%;
-        font-size: 1.2vi;
+        font-size: 0.8vw;
     }
 
-    
+
 
     .counter-filter {
         display: flex;
@@ -40,8 +40,8 @@
         align-items: center;
         text-align: center;
         position: absolute;
-        width: 1.3vw;
-        height: 1.3vw;
+        width: 1.1vw;
+        height: 1.1vw;
         border-radius: 50vw;
         border: none;
         background-color: transparent;
@@ -49,8 +49,8 @@
         top: 10%;
         z-index: 999;
         font-size: 0.8vw;
-        background-color: #D49292;
-        color: #ffff;
+        background-color: var(--cor-rose);
+        color: var(--cor-light);
     }
 
     button {
@@ -61,6 +61,7 @@
         border: none;
         background-color: transparent;
         right: 0.4vw;
+
         i {
             position: absolute;
             width: 100%;
@@ -70,23 +71,24 @@
             border: none;
             left: 0vw;
             top: 15%;
-            font-size: 1.3vi;
+            font-size: 1vw;
         }
     }
 }
 
-.filtersClosed {
+.d_filter-container .filtersClosed {
     display: flex;
     flex-direction: column;
     min-width: 0vw;
     max-width: 0vw;
     min-height: 0vh;
     max-height: 0vh;
-    top: 5.8vh;
-    overflow-y: auto;
+    top: 2.3vw;
+    overflow-y: hidden;
     position: absolute;
     transition: 0.5s;
     opacity: 0%;
+
     .box-container {
         display: flex;
         flex-direction: column;
@@ -95,80 +97,63 @@
 
         .h1-container {
             text-align: center;
-            background-color: #D49292;
-            color: #ffff;
             padding: 0.2vw;
-            font-size: 1.3vw;
+            font-size: 0.1vw;
 
 
         }
 
-        .h2-container {
-            text-align: start;
-            padding: 0.5vw;
-            font-size: 1.1vw;
-        }
 
         .span-container {
             text-align: start;
             padding: 0.5vw;
             cursor: pointer;
-            font-size: 1vw;
+            font-size: 0.1vw;
+            opacity: 0%;
         }
     }
 }
 
-.filters {
-    
+.d_filter-container .filters {
+
     display: flex;
     flex-direction: column;
-    min-width: 100%;
-    max-width: 100%;
+    min-width: 20vw;
+    max-width: 20vw;
     min-height: 3vh;
     max-height: 30vh;
-    top: 110%;
+    top: 2.3vw;
     border-radius: 7px;
     position: absolute;
     transition: 0.5s;
     overflow-y: auto;
-    overflow-x: hidden ;
+    overflow-x: hidden;
     gap: 0.2vw;
-    background-color: rgb(240, 240, 240);
+    background-color: var(--cor-min_grey);
     box-shadow: 0px 0px 8px rgb(144, 143, 143);
-    
+    z-index: 9993;
+
     /* Estilizando a scrollbar para navegadores baseados em WebKit (Chrome, Edge, Safari) */
 
     .box-container {
         display: flex;
         flex-direction: column;
-        background-color: #f1efef;
-        font-family: 'Arial';
         width: 100%;
 
         .h1-container {
             text-align: center;
-            background-color: #D49292;
-            color: #ffff;
+            background-color: var(--cor-rose);
+            color: var(--cor-light);
             padding: 0.2vw;
             text-wrap: nowrap;
-            font-size: 1.2vw;
+            font-size: 1.1vw;
 
 
-        }
-
-        .h2-container {
-            text-align: start;
-            
-            background-color: #e7e7e7;
-            padding: 0.5vw;
-            text-wrap: nowrap;
-            font-size: 0.8vw;
-            font-weight: bold;
         }
 
         .span-container {
             text-align: start;
-            padding: 0.5vw;
+            padding: 0.3vw;
             width: 80%;
             cursor: pointer;
             text-wrap: nowrap;
@@ -182,12 +167,12 @@
 
     .filter-option {
         padding-left: 0.5vw;
+
         label {
             display: flex;
             justify-content: start;
             align-items: center;
             flex-direction: row;
-            font-family: 'Arial';
             font-size: 1vw;
             
             input {
@@ -204,7 +189,7 @@
                 width: 0.8vw;
                 height: 0.8vw;
                 border-radius: 1vw;
-                background-color: #c6c2c2;
+                background-color: var(--cor-min_grey);
                 position: relative;
             }
 
@@ -215,7 +200,7 @@
                 height: 100%;
 
                 border-radius: 1vw;
-                background-color: #D49292;
+                background-color: var(--cor-rose);
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%, -50%);
@@ -237,35 +222,35 @@
 
     .filter-option:hover{
         .custom-checkbox{
-            background-color: #c1878777;
+            background-color: var(--cor-rose);
         }
     }
 
 }
 
-.filters::-webkit-scrollbar {
-    width: 1.5vw;
+.d_filter-container .filters::-webkit-scrollbar {
+    width: 1.1vw;
     /* Largura da scrollbar */
     border-top-right-radius: 7px;
 
 }
 
-.filters::-webkit-scrollbar-track {
-    background: #dedede;
+.d_filter-container .filters::-webkit-scrollbar-track {
+    background: var(--cor-min_grey);
     /* Cor de fundo da track */
     border-top-right-radius: 7px;
     border-bottom-right-radius: 7px;
 }
 
-.filters::-webkit-scrollbar-thumb {
-    background-color: #d49292a9;
+.d_filter-container .filters::-webkit-scrollbar-thumb {
+    background-color: var(--cor-rose);
     /* Cor do thumb */
-    border-top-right-radius: 7px;
-    border-bottom-right-radius: 7px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
 }
 
 /* Opções adicionais para hover */
-.filters::-webkit-scrollbar-thumb:hover {
-    background-color: #8e5b5b;
+.d_filter-container .filters::-webkit-scrollbar-thumb:hover {
+    background-color: var(--cor-rose);
     /* Cor do thumb ao passar o mouse */
 }
