--- a/apoio_client/src/app/pages/Main/Main.css
+++ b/apoio_client/src/app/pages/Main/Main.css
@@ -2,7 +2,7 @@
 
 :root{
     --cor-light: #fff;
-    --cor-rose: #de8484;
+    --cor-rose: #c45b59;
     --cor-white-backgroud: rgb(248, 248, 248);
     --cor-shadow-min: rgb(217, 217, 217);
     --cor-shadow-mid: rgb(198, 186, 186);
@@ -16,12 +16,20 @@
     font-family: 'Roboto';
 }
 
+@keyframes go-back {
+    0% {
+        transform: translateX(100vw);
+    }
+    100% {
+        transform: translateX(0vw);
+    }
+}
+
 .body_page{
     display: flex;
     flex-direction: column;
     user-select: none;
     position: relative;
-    
     font-family: 'Roboto';
 }
 
@@ -35,6 +43,8 @@
     box-shadow: 0px 1px 15px 0px var(--cor-shadow-min);
     width: 100vw;
     height: 3vw;
+    
+    animation: go-back 0.3s;
     z-index: 9999;
     
     font-family: 'Roboto';
@@ -51,6 +61,7 @@
     height: 93.6vh;
     transition: 0.5s;
     font-family: 'Roboto';
+    animation: go-back 0.4s;
 }
 
 .container_bottom .side_bar_container{
@@ -65,6 +76,7 @@
     transition: 0.5s;
     border-right: 1px solid var(--cor-min_grey);
     z-index: 9998;
+    animation: go-back 0.5s;
 }
 
 
