--- a/apoio_client/src/app/pages/RenderPages/Relatorios/RenderPages/ProdutividadeUBS/ProdutividadeUBS.css
+++ b/apoio_client/src/app/pages/RenderPages/Relatorios/RenderPages/ProdutividadeUBS/ProdutividadeUBS.css
@@ -3,10 +3,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 97%;
-    height: 96%;
+    padding-top: 1.5vw;
+    width: 100%;
+    height: 100%;
     border-radius: 2vw;
-    background-color: #D9D9D9;
+    background-color: transparent;
 
     .container_title{
         display: flex;
@@ -15,10 +16,9 @@
         align-items: center;
         position: relative;
         width: 100%;
-        height: 15%;
-        border-top-left-radius: 2vw;
-        border-top-right-radius: 2vw;
-        background-color: rgb(231, 231, 231);
+        height: 4vw;
+        z-index: 9995;
+        background-color: rgba(245, 245, 245, 0.452);
        
 
         .back_button_container{
@@ -42,7 +42,7 @@
                 font-size: 2.5vi;
                 width: 40%;
                 height: 70%;
-                color: #D49292;
+                color: var(--cor-rose);
 
                 i{
                     position: absolute;
@@ -61,28 +61,14 @@
                 }
             }
         }
-
-        .icon_container{
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
-            position: absolute;
-            left: 7%;
-            height: 100%;
-            width: 5vw;
-            color: #b3a6a6;
-            font-size: 3vi;
-        }
-
         .title_container{
             display: flex;
             align-items: center;
             flex-direction: row;
             justify-content: center;
             height: 100%;
-            font-family: 'Arial';
-            font-size: 2.5vi;
+            width: 30%;
+            font-size: 2.5vw;
         }
 
         
@@ -92,7 +78,7 @@
             justify-content: center;
             align-items: center;
             position: absolute;
-            right:2%;
+            left:5%;
             gap: 2vw;
 
             .filter-container{
@@ -108,15 +94,20 @@
         align-items: center;
         width: 100%;
         height: 20%;
+        background-color: rgba(245, 245, 245, 0.452);
         gap: 2vw;
 
         .filters_organization{
             display: flex;
-            justify-content: start;
-            align-items: start;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
             width: 95%;
             height: 70%;
+            padding: 1vw;
             gap: 2vw;
+            background-color: rgba(186, 97, 97, 0.031);
+            border-radius: 50px;
         }
     } 
 
