--- a/apoio_client/src/app/components/Filtros/FiltroDinamico/FiltroDinamico.css
+++ b/apoio_client/src/app/components/Filtros/FiltroDinamico/FiltroDinamico.css
@@ -133,7 +133,6 @@
     box-shadow: 0px 0px 8px rgb(144, 143, 143);
     z-index: 9993;
 
-    /* Estilizando a scrollbar para navegadores baseados em WebKit (Chrome, Edge, Safari) */
 
     .box-container {
         display: flex;
@@ -144,9 +143,68 @@
             text-align: center;
             background-color: var(--cor-rose);
             color: var(--cor-light);
-            padding: 0.2vw;
             text-wrap: nowrap;
             font-size: 1.1vw;
+            padding-left: 0.5vw;  
+            cursor: pointer;
+        
+
+            label {
+                display: flex;
+                justify-content: start;
+                align-items: center;
+                flex-direction: row;
+                font-size: 1vw;    
+                cursor: pointer;
+                
+                input {
+                    width: 10%;
+                    height: 10%;
+                    left: 0;
+                    appearance: none;
+                    position: absolute;
+                    background-color: transparent;
+                    cursor: pointer;
+                }
+    
+                .custom-checkbox {
+                    display: inline-block;
+                    width: 0.8vw;
+                    height: 0.8vw;
+                    border-radius: 1vw;
+                    background-color: var(--cor-shadow-mid);
+                    position: relative;
+                    cursor: pointer;
+                }
+    
+                .custom-checkbox::after {
+                    content: '';
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    cursor: pointer;
+                    border-radius: 1vw;
+                    background-color: var(--cor-light);
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    opacity: 0;
+                    transition: opacity 0.3s;
+                }
+    
+                input[type="checkbox"]:checked+.custom-checkbox::after {
+                    opacity: 1;
+                }
+    
+                .span-container{
+                    text-align: center;
+                    cursor: pointer;
+                    text-wrap: nowrap;
+                    font-size: 1vw;
+                }
+    
+                
+            }
 
 
         }
@@ -160,20 +218,24 @@
             font-size: 1vw;
         }
 
-
-
-
+        .h1-container:hover{
+            .custom-checkbox{
+                background-color: var(--cor-rose-light);
+                cursor: pointer;
+            }
+        }
     }
+    
 
     .filter-option {
         padding-left: 0.5vw;
-
         label {
             display: flex;
             justify-content: start;
             align-items: center;
             flex-direction: row;
             font-size: 1vw;
+            
             
             input {
                 width: 10%;
@@ -191,6 +253,8 @@
                 border-radius: 1vw;
                 background-color: var(--cor-min_grey);
                 position: relative;
+                transition: 0.2s;
+                
             }
 
             .custom-checkbox::after {
@@ -198,31 +262,26 @@
                 position: absolute;
                 width: 100%;
                 height: 100%;
-
                 border-radius: 1vw;
                 background-color: var(--cor-rose);
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%, -50%);
                 opacity: 0;
-                /* Esconder quando não está marcado */
                 transition: opacity 0.3s;
             }
 
             input[type="checkbox"]:checked+.custom-checkbox::after {
                 opacity: 1;
-                /* Mostrar quando está marcado */
             }
 
-            
-
-            
         }
     }
 
     .filter-option:hover{
         .custom-checkbox{
-            background-color: var(--cor-rose);
+            background-color: var(--cor-rose-light);
+            cursor: pointer;
         }
     }
 
