--- a/apoio_client/src/app/components/SideBar/SideBar.css
+++ b/apoio_client/src/app/components/SideBar/SideBar.css
@@ -73,7 +73,7 @@
 .side_bar_container:hover{
     width: 18%;
     height: 100%;
-    background-color: white;
+    background-color: var(--cor-light);
     box-shadow: 0px 15px 10px 0px var(--cor-shadow-min);
     .infoSystem{
         opacity: 100%;
