--- a/apoio_client/src/app/pages/RenderPages/Relatorios/RenderPages/ProdutividadeUBS/ProdutividadeUBS.css
+++ b/apoio_client/src/app/pages/RenderPages/Relatorios/RenderPages/ProdutividadeUBS/ProdutividadeUBS.css
@@ -1,12 +1,11 @@
 .container_report{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     padding-top: 1.5vw;
     width: 100%;
     height: 100%;
-    border-radius: 2vw;
     background-color: transparent;
 
     .container_title{
@@ -28,9 +27,8 @@
             position: absolute;
             left: 0px;
             justify-content: center;
-            border-top-left-radius: 2vw;
             height: 100%;
-            width: 7%;
+            width: 11%;
             
             
             .back_button{
@@ -38,7 +36,8 @@
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
-                position: relative;
+                position: absolute;
+                left: 0;
                 font-size: 2.5vi;
                 width: 40%;
                 height: 70%;
@@ -60,6 +59,27 @@
                     border: none;
                 }
             }
+
+            .loading_container{
+                display: flex;
+                flex-direction: row;
+                position: absolute;
+                left: 4vw;
+                justify-content: center;
+                align-items: center;
+                gap: 0.5vw;
+                font-size: 1vw;
+                .loading_filter {
+                    margin-left: 0.8vw;
+                    border: 0.3vw solid #f3f3f3;
+                    border-top: 0.3vw solid var(--cor-rose);
+                    border-radius: 50%;
+                    width: 1vw;
+                    height: 1vw;
+                    animation: spin 1s linear infinite;
+                }
+            }
+
         }
         .title_container{
             display: flex;
@@ -71,21 +91,6 @@
             font-size: 2.5vw;
         }
 
-        
-        .municipio_container{
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-            position: absolute;
-            left:5%;
-            gap: 2vw;
-
-            .filter-container{
-                width: 40%;
-            }
-        }
-
     }
 
     .container_filters{
@@ -93,7 +98,7 @@
         justify-content: center;
         align-items: center;
         width: 100%;
-        height: 20%;
+        height: 10vw;
         background-color: rgba(245, 245, 245, 0.452);
         gap: 2vw;
 
