--- a/apoio_client/src/app/pages/Main/Main.css
+++ b/apoio_client/src/app/pages/Main/Main.css
@@ -2,7 +2,8 @@
 
 :root{
     --cor-light: #fff;
-    --cor-rose: #c67c7c;
+    --cor-rose: #e17979;
+    --cor-rose-mid: #975e5e;
     --cor-rose-light: #d3a9a9;
     --cor-white-backgroud: rgb(248, 248, 248);
     --cor-shadow-min: rgb(217, 217, 217);
