--- a/apoio_client/src/app/components/Filtros/FiltroDinamico/FiltroDinamico.css
+++ b/apoio_client/src/app/components/Filtros/FiltroDinamico/FiltroDinamico.css
@@ -45,8 +45,8 @@
         border-radius: 50vw;
         border: none;
         background-color: transparent;
-        right: 110%;
-        top: 10%;
+        right: 8%;
+        top: 15%;
         z-index: 999;
         font-size: 0.8vw;
         background-color: var(--cor-rose);
@@ -55,12 +55,13 @@
 
     button {
         position: absolute;
-        width: 10%;
+        width: 100%;
         height: 80%;
         border-radius: 50vw;
         border: none;
         background-color: transparent;
         right: 0.4vw;
+        text-align: end;
 
         i {
             position: absolute;
@@ -118,8 +119,8 @@
 
     display: flex;
     flex-direction: column;
-    min-width: 20vw;
-    max-width: 20vw;
+    min-width: 15vw;
+    max-width: 30vw;
     min-height: 3vh;
     max-height: 30vh;
     top: 2.3vw;
