--- a/apoio_client/src/app/components/Filtros/FiltroSimples/FiltroSimples.css
+++ b/apoio_client/src/app/components/Filtros/FiltroSimples/FiltroSimples.css
@@ -46,22 +46,23 @@
         border-radius: 50vw;
         border: none;
         background-color: transparent;
-        right: 110%;
-        top: 5%;
+        right: 8%;
+        top: 15%;
         z-index: 999;
-        font-size: 0.8vw;
+        font-size: 0.6vw;
         background-color: var(--cor-rose);
         color: var(--cor-light);
     }
 
     button {
         position: absolute;
-        width: 10%;
+        width: 100%;
         height: 80%;
         border-radius: 50vw;
         border: none;
         background-color: transparent;
         right: 0.4vw;
+        text-align: end;
         i {
             position: absolute;
             width: 100%;
