--- a/apoio_client/src/app/pages/RenderPages/Relatorios/RenderPages/ProdutividadeUBS/ProdutividadeUBS.css
+++ b/apoio_client/src/app/pages/RenderPages/Relatorios/RenderPages/ProdutividadeUBS/ProdutividadeUBS.css
@@ -98,7 +98,7 @@
         justify-content: center;
         align-items: center;
         width: 100%;
-        height: 10vw;
+        height: 7vw;
         background-color: rgba(245, 245, 245, 0.452);
         gap: 2vw;
 
@@ -108,7 +108,7 @@
             align-items: center;
             flex-wrap: wrap;
             width: 95%;
-            height: 70%;
+            height: 25%;
             padding: 1vw;
             gap: 2vw;
             background-color: rgba(186, 97, 97, 0.031);
@@ -118,11 +118,52 @@
 
     .container_view{
         display: flex;
-        justify-content: center;
-        align-items: center;
+        justify-content: end;
+        align-items: start;
         width: 100%;
         height: 50%;
         overflow-y: auto;
+
+        .extract_btn{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 1vw 5vw;
+
+            button{
+                width: 10vw;
+                height: 2vw;
+                border-radius: 2vw;
+                border: none;
+                background-color: var(--cor-rose);
+                color: var(--cor-light);
+                box-shadow: 0 2px 5px var(--cor-shadow-mid);
+                transition: 0.3s;
+                cursor: pointer;
+            }
+
+            button:hover{
+                width: 10vw;
+                height: 2vw;
+                border-radius: 2vw;
+                border: none;
+                background-color: var(--cor-rose);
+                color: var(--cor-light);
+                box-shadow: 0 1px 3px var(--cor_black);
+                cursor: pointer;
+            }
+
+            button:active{
+                width: 10vw;
+                height: 2vw;
+                border-radius: 2vw;
+                border: none;
+                background-color: var(--cor-rose-mid);
+                color: var(--cor-light);
+                box-shadow: 0 1px 3px var(--cor_black);
+                cursor: pointer;
+            }
+        }
     } 
 
     .container_buttons{
