Correção de bug: Notificações

--- a/apoio_client/src/app/pages/ProdutividadeUBS/ProdutividadeUBS.css
+++ b/apoio_client/src/app/pages/ProdutividadeUBS/ProdutividadeUBS.css
@@ -83,7 +83,8 @@
 
         .filters_organization{
             display: flex;
-            justify-content: center;
+            flex-direction: row;
+            justify-content: space-around;
             align-items: center;
             flex-wrap: wrap;
             width: 95%;
