--- a/apoio_client/src/app/pages/Relatorios/Relatorios.css
+++ b/apoio_client/src/app/pages/Relatorios/Relatorios.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: start;
-    padding-top: 2vw;
+    padding-top: 3vw;
     align-items: center;
     width: 100%;
     height: 100%;
@@ -28,7 +28,8 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    padding-top: 2vw;
-    width: 100%;
+    margin-top: 2vw;
+    padding: 5vw;
+    width: 50%;
     gap: 2vw;
 }
