--- a/apoio_client/src/root.css
+++ b/apoio_client/src/root.css
@@ -1,9 +1,9 @@
 :root{
     --cor-light: #fff;
-    --cor-rose: #e96969;
-    --cor-rose-mid: #975e5e;
-    --cor-rose-light: #d3a9a9;
-    --cor-white-backgroud: rgb(248, 248, 248);
+    --cor-rose: #725fc5;
+    --cor-rose-mid: #4f497c;
+    --cor-rose-light: #bfb3db;
+    --cor-white-background: rgb(248, 248, 248);
     --cor-shadow-min: rgb(217, 217, 217);
     --cor-shadow-mid: rgb(198, 186, 186);
     --cor-min_grey: rgb(242, 242, 242);
