--- a/apoio_client/src/app/pages/Main.css
+++ b/apoio_client/src/app/pages/Main.css
@@ -20,22 +20,21 @@
     flex-direction: column;
     user-select: none;
     position: relative;
-    font-family: 'Roboto';
+    width: 100vw;
+    height: 100vh;
 }
 
 .container_top{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    position: fixed;
     align-items: center;
     background-color: var(--cor-white-backgroud);
-    box-shadow: 0px 1px 15px 0px var(--cor-shadow-min);
+    box-shadow: 0px 1px 5px 0px rgb(116, 114, 114);
     width: 100vw;
     height: 3vw;
     animation: go-back 0.3s;
     z-index: 9999;
-    font-family: 'Roboto';
 }
 
 .container_bottom{
@@ -45,28 +44,11 @@
     align-items: center;
     position: relative;
     width: 100vw;
-    margin-top: 2vw;
-    height: 93.6vh;
+    height: 100%;
     transition: 0.5s;
-    font-family: 'Roboto';
     animation: go-back 0.4s;
 }
 
-.container_bottom .side_bar_container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    left: 0px;
-    width: 4%;
-    height: 100%;
-    transition: 0.5s;
-    border-right: 1px solid var(--cor-min_grey);
-    z-index: 9998;
-    animation: go-back 0.5s;
-    font-family: 'Roboto';
-}
 
 
 .container_bottom .content_container{
@@ -74,11 +56,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
-    width: 96%;
     margin-left: 4%;
+    width: 96%;
     height: 100%;
     z-index: 9997;
-    font-family: 'Roboto';
 }
 
