--- a/apoio_client/src/app/components/TopMenu/TopMenu.css
+++ b/apoio_client/src/app/components/TopMenu/TopMenu.css
@@ -107,14 +107,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 20%;
-    height: 100%;
+    width: 2.2vi;
+    height: 2.0vi;
     .item_hover{
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 2.5vi;
-        height: 2.7vi;
+        width: 2.2vi;
+        height: 2.0vi;
         opacity: 100%;
         background-color: transparent;
         border-radius: 25px ;
@@ -127,7 +127,7 @@
             user-select: none;
             cursor: pointer;
             transition: 0.18s;
-            font-size:1vi;
+            font-size:0.7vi;
             font-family: 'Arial';
         }
 
@@ -135,8 +135,8 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            width: 2.7vi;
-            height: 2.5vi;
+            width: 2.2vi;
+            height: 2.0vi;
             border-radius: 50%; 
             transition: all 0.1s;
 
@@ -146,9 +146,9 @@
                 border-radius: 50%;
                 border: none;
                 cursor: pointer;
-                font-size:1.2vi;
+                font-size:1vi;
                 transition: 0.2s;
-                background-color: #D49292;
+                background-color: var(--cor-rose);;
                 color: #ffff;
                 opacity: 65%;
             }
@@ -159,7 +159,8 @@
 .container_top .right_container_top .submenu_top .item_login_container .item_hover:hover{
     padding-left: 5.5vw; 
     margin-left: -5.5vw; 
-    height: 2.6vi;
+   
+    height: 2.0vi;
     opacity: 100%;
     background-color:rgb(237, 237, 237);
     span{
