--- a/apoio_client/src/app/pages/Main.css
+++ b/apoio_client/src/app/pages/Main.css
@@ -25,11 +25,12 @@
 }
 
 .container_top{
+    position: fixed;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: var(--cor-white-backgroud);
+    background-color: rgb(255, 255, 255);
     box-shadow: 0px 1px 5px 0px rgb(116, 114, 114);
     width: 100vw;
     height: 3vw;
@@ -46,6 +47,7 @@
     width: 100vw;
     height: 100%;
     transition: 0.5s;
+    margin-top: 3vw;
     animation: go-back 0.4s;
 }
 
@@ -56,8 +58,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-left: 4%;
-    width: 96%;
+    margin-left: 3%;
+    width: 97%;
     height: 100%;
     z-index: 9997;
 }
