--- a/apoio_client/src/root.css
+++ b/apoio_client/src/root.css
@@ -1,8 +1,8 @@
 :root{
     --cor-light: #fff;
-    --cor-rose: #dd4573;
-    --cor-rose-mid: #ac4b68;
-    --cor-rose-light: #e77f9e;
+    --cor-rose: #248bbb;
+    --cor-rose-mid: #2e5477;
+    --cor-rose-light: #7fb8e7;
     --cor-white-background: rgb(248, 248, 248);
     --cor-shadow-min: rgb(217, 217, 217);
     --cor-shadow-mid: rgb(198, 186, 186);
