--- a/apoio_client/src/app/components/TopMenu/TopMenu.css
+++ b/apoio_client/src/app/components/TopMenu/TopMenu.css
@@ -4,7 +4,11 @@
     justify-content: center;
     align-items: center;
     width: 25%;
-    height: 100%;
+    font-size: 25px;
+    @media (max-width:760px) {
+        width: 100%;
+   }
+  
 }
 
 .container_top .left_container_top .title_top{
@@ -22,9 +26,22 @@
     }
 
     span{
-        font-size: 1.8vw;
+        font-size: 1.7vw;
         color: var(--cor-rose);
     }
+
+    @media (max-width:760px) {
+        gap: 1vw;
+        h1{
+            font-size: 5vw;
+            color: var(--cor-black);
+        }
+    
+        span{
+            font-size: 5vw;
+            color: var(--cor-rose);
+        }
+   }
 }
 
 
@@ -33,6 +50,9 @@
     display: flex;
     width: 50%;
     height: 100%;
+    @media (max-width:760px) {
+         display: none;
+    }
 }
 
 .container_top .right_container_top{
@@ -43,6 +63,9 @@
     flex-wrap: wrap;
     width: 25%;
     height: 100%;
+    @media (max-width:760px) {
+        display: none;
+   }
 }
 
 .container_top .right_container_top .submenu_top{
