--- a/apoio_client/src/app/pages/Main.css
+++ b/apoio_client/src/app/pages/Main.css
@@ -18,27 +18,27 @@
 .body_page{
     display: flex;
     flex-direction: column;
-    user-select: none;
     position: relative;
+    user-select: none;
 }
 
 .container_top{
-    
     display: flex;
     flex-direction: row;
     justify-content: center;
-    position: fixed;
-    top: 0;
     align-items: center;
-    background-color: rgb(255, 255, 255);
-    box-shadow: 0px 1px 5px 0px rgb(116, 114, 114);
+    position: fixed;
     width: 100%;
-    min-height:45px;
-    animation: go-back 0.3s;
+    min-height: 35px;
     z-index: 9999;
 
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 0.50px 4px 0px rgb(116, 114, 114);
+
+    animation: go-back 0.3s;
+
     @media (max-width:760px) {
-        box-shadow: 0px 0px 4px 0px rgb(170, 169, 169);
+        box-shadow: 0px 0px 3px 0px rgb(170, 169, 169);
    }
 
     
@@ -50,9 +50,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    margin-top: 45px;
-    height: calc(100vh - 45px);
-    animation: go-back 0.4s;;
+    
 }
 
 
@@ -62,8 +60,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 80%;
-    height: 100%;
+    width: 100%;
+    height: calc(100vh - 35px);
+    margin-top: 35px;
+
 
     @media (max-width: 760px){
         min-width: 100%;
