--- a/apoio_client/src/app/pages/Map/Map.css
+++ b/apoio_client/src/app/pages/Map/Map.css
@@ -56,7 +56,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    height: 10%;
+    height: 8%;
     background-color: var(--cor-min_grey);
     width: 100%;
     margin-top: 0.5vh;
@@ -73,12 +73,12 @@
         .red,
         .yellow,
         .green {
-            width: 1.2vw;
-            height: 1.3vw;
+            width: 25px;
+            height: 25px;
         }
 
         span {
-            font-size: 1.3vw;
+            font-size: 15px;
         }
     }
 
