--- a/apoio_client/src/app/components/DevStep/DevStep.css
+++ b/apoio_client/src/app/components/DevStep/DevStep.css
@@ -6,6 +6,7 @@
     position:relative;
     width: 100%;
     height: 100%;
+    user-select: none;
     i{    
         position:relative;
         font-size: 7vw;
