--- a/apoio_client/src/app/pages/Main.css
+++ b/apoio_client/src/app/pages/Main.css
@@ -3,7 +3,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Roboto';
+    font-family: "Titillium Web", sans-serif;
 }
 
 @keyframes go-back {
@@ -25,19 +25,20 @@
 .container_top{
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     position: fixed;
     width: 100%;
-    min-height: 35px;
+    min-height: 45px;
     z-index: 9999;
 
     background-color: rgb(255, 255, 255);
-    box-shadow: 0px 0.50px 4px 0px rgb(116, 114, 114);
+    box-shadow: 0px 0.5px 0px 0px rgb(212, 212, 212);
 
     animation: go-back 0.3s;
 
     @media (max-width:760px) {
+        justify-content: center;
         box-shadow: 0px 0px 3px 0px rgb(170, 169, 169);
    }
 
@@ -61,8 +62,8 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: calc(100vh - 35px);
-    margin-top: 35px;
+    height: calc(100vh - 45px);
+    margin-top: 45px;
 
 
     @media (max-width: 760px){
